--- a/rca/static_src/sass/components/_nav.scss
+++ b/rca/static_src/sass/components/_nav.scss
@@ -1,7 +1,6 @@
 .nav {
     margin-bottom: 1rem;
 
-    a,
     p {
         color: $color--white; // temp
     }
@@ -27,7 +26,7 @@
         display: none;
 
         @include media-query(large) {
-            padding-top: $gutter * 9.5;
+            padding-top: ($gutter * 6);
         }
 
         &:hover,
@@ -53,8 +52,12 @@
     }
 
     &__item {
-        &--secondary {
-            font-weight: $weight--light;
+        &--group-heading {
+            display: block;
+
+            @include media-query(large) {
+                display: none;
+            }
         }
 
         &--back {
@@ -92,12 +95,19 @@
     }
 
     &__link {
-        display: block;
+        font-size: map-get($small-font-sizes, xs);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
         padding: $gutter 0;
         color: $color--white;
 
         &:hover {
             cursor: pointer;
+        }
+
+        @include media-query(medium) {
+            font-size: map-get($large-font-sizes, xs);
         }
 
         &--breadcrumb {
@@ -107,6 +117,24 @@
                 color: lighten($color--primary, 20%);
                 border-bottom: 1px solid $color--primary;
             }
+        }
+
+        &--group-heading {
+            font-size: map-get($small-font-sizes, s);
+
+            @include media-query(medium) {
+                font-size: map-get($medium-font-sizes, s);
+            }
+        }
+
+    }
+
+    &__icon {
+        fill: $color--white;
+        pointer-events: none;
+
+        @include media-query(large) {
+            display: none;
         }
     }
 }
